feat: Added endpoints
