# src/main/java/com/webflux/sample/controller/PhoneController.java
@@ -1,8 +1,10 @@
 package com.webflux.sample.controller;
 
-import com.webflux.sample.model.PhoneCreatedResponse;
-import com.webflux.sample.model.PhoneListResponse;
+import com.webflux.sample.model.PhoneCreatedResponseBody;
+import com.webflux.sample.model.PhoneReadResponseBody;
+import com.webflux.sample.model.PhoneRequestBody;
 import com.webflux.sample.person_details.api.PhoneApi;
+import com.webflux.sample.service.PhoneService;
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.http.ResponseEntity;
@@ -15,15 +17,30 @@ import reactor.core.publisher.Mono;
 @AllArgsConstructor
 public class PhoneController implements BaseController, PhoneApi {
 
+    PhoneService phoneService;
+
     @Override
-    public Mono<ResponseEntity<PhoneCreatedResponse>> createPhone(
+    public Mono<ResponseEntity<PhoneCreatedResponseBody>> createPhone(
+            Mono<PhoneRequestBody> phoneRequestBody,
             ServerWebExchange exchange
     ) {
-        return null;
+        log.info("[MARKER:createPhone] - START");
+
+        Mono<ResponseEntity<PhoneCreatedResponseBody>> response = phoneService
+                .create(phoneRequestBody)
+                .doFirst(() -> log.info(">>> Create phone started"))
+                .doOnTerminate(() -> log.info(">>> Create phone finished"))
+                .map(ResponseEntity::ok)
+                .doOnSuccess(result -> log.info(">>> The createPhone result is {}", result))
+                .doOnError(error -> log.error(">>> The createPhone error is {}", String.valueOf(error)));
+
+        log.info("[MARKER:createPhone] - STOP");
+
+        return response;
     }
 
     @Override
-    public Mono<ResponseEntity<PhoneListResponse>> findPhone(
+    public Mono<ResponseEntity<PhoneReadResponseBody>> findPhone(
             String phone,
             ServerWebExchange exchange
     ) {
